Replacing buttons on page 404

--- a/packages/shared/src/utils/styles/modules/ErrorNotFound.module.scss
+++ b/packages/shared/src/utils/styles/modules/ErrorNotFound.module.scss
@@ -139,7 +139,8 @@
   display: flex;
   gap: 1rem;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  flex-direction: row;
   
   @media (max-width: 480px) {
     flex-direction: column;
