--- a/packages/shared/src/components/UI/SubmitButton/SubmitButton.module.scss
+++ b/packages/shared/src/components/UI/SubmitButton/SubmitButton.module.scss
@@ -4,7 +4,6 @@
 .submit__button {
   width: 100%;
   padding: 0.75rem 1rem;
-  border: none;
   border-radius: 0.5rem;
   font-weight: bold;
   background-color: colors.$yellow;
@@ -24,10 +23,9 @@
   &_secondary {
     background: transparent;
     color: colors.$grayText;
-    border: 2px solid colors.$ashDarkened;
-    padding: 1rem 2rem;
-    border-radius: 50px;
-    font-size: 1rem;
+    border: 2px solid colors.$gray;
+    padding: 0.75rem 1rem;
+    border-radius: 0.5rem;
     font-weight: 500;
 
     &:hover {
