--- a/packages/shared/src/utils/styles/modules/PriceWidget.module.scss
+++ b/packages/shared/src/utils/styles/modules/PriceWidget.module.scss
@@ -7,7 +7,11 @@
         line-height: 1.125rem;
         margin-bottom: .5rem;
     }
-    
+
     .price__inputs {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        align-items: center;
     }
 }
