--- a/packages/shared/src/components/UI/CategoriesButton/CategoriesButton.module.scss
+++ b/packages/shared/src/components/UI/CategoriesButton/CategoriesButton.module.scss
@@ -6,6 +6,7 @@
         max-width: 180px;
         display: flex;
         align-items: center;
+        justify-content: space-evenly;
         flex-wrap: nowrap;
         color: colors.$yellow;
         font-size: 1rem;
