--- a/packages/shared/src/components/UI/HeaderMenuList/HeaderMenuList.module.scss
+++ b/packages/shared/src/components/UI/HeaderMenuList/HeaderMenuList.module.scss
@@ -23,6 +23,7 @@
             font-size: 1rem;
             color: colors.$white;
             position: relative;
+            padding: 0 0 0 4px;
 
             &::before {
                 content: '';
