--- a/packages/shared/src/utils/styles/modules/AsideList.module.scss
+++ b/packages/shared/src/utils/styles/modules/AsideList.module.scss
@@ -43,6 +43,7 @@
             z-index: 1;
             position: relative;
             transition: all 0.2s ease;
+            width: 24px;
         }
 
         &:hover .category__item_content {
