Added routers for LazyAdminShopUsers

--- a/packages/shared/src/utils/styles/modules/AsideList.module.scss
+++ b/packages/shared/src/utils/styles/modules/AsideList.module.scss
@@ -36,6 +36,11 @@
             transition: all 0.2s ease;
         }
 
+        a {
+            text-decoration: none;
+            color: colors.$black;
+        }
+
         .category__item_content {
             display: flex;
             align-items: center;
