--- a/services/admin/src/components/App/App.module.scss
+++ b/services/admin/src/components/App/App.module.scss
@@ -7,4 +7,9 @@
     margin: 0 auto;
     display: flex;
     min-height: 60vh;
+
+    .content {
+        flex: 1;
+        max-width: calc(consts.$clientWidth - consts.$asideWidth + 8px);
+    }
 }
