Added rendering of user cards in the admin panel

--- a/services/admin/src/components/App/App.module.scss
+++ b/services/admin/src/components/App/App.module.scss
@@ -11,5 +11,6 @@
     .content {
         flex: 1;
         max-width: calc(consts.$clientWidth - consts.$asideWidth + 8px);
+        padding: 12px 0 0 0;
     }
 }
