--- a/services/admin/src/pages/AdminShopUsers/AdminProdUsers.module.scss
+++ b/services/admin/src/pages/AdminShopUsers/AdminProdUsers.module.scss
@@ -1,6 +1,6 @@
-.overview {
-    // display: grid;
-    // grid-template-columns: repeat(auto-fill, minmax(257px, 1fr));
-    // gap: 8px 6px;
-    // width: 100%;
+.overview__prod {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(257px, 1fr));
+    gap: 8px 6px;
+    width: 100%;
 }
