Now the aside is sticky

--- a/services/admin/src/utils/styles/modules/AsideAdmin.module.scss
+++ b/services/admin/src/utils/styles/modules/AsideAdmin.module.scss
@@ -1,5 +1,6 @@
 @use '@packages/shared/src/utils/styles/consts' as consts;
 
 .aside {
-    max-width: consts.$asideWidth
-};
+    max-width: consts.$asideWidth;
+    position: relative;
+}
