--- a/packages/shared/src/utils/styles/modules/AsideList.module.scss
+++ b/packages/shared/src/utils/styles/modules/AsideList.module.scss
@@ -5,6 +5,8 @@
     min-width: 292px;
     margin-right: 8px;
     font-size: 1.1rem;
+    position: sticky;
+    top: 0;
 
     .category__item {
         display: flex;
