--- a/packages/shared/src/components/UI/FileUploader/FileUploader.module.scss
+++ b/packages/shared/src/components/UI/FileUploader/FileUploader.module.scss
@@ -1,4 +1,19 @@
+@use '@packages/shared/src/utils/styles/colorScheme' as colors;
 
-.uploader{
-    
+.wapper {
+    padding: 12px;
+    border-radius: 16px;
+    border: 2px dashed colors.$gray;
+    width: 100%;
+    height: 100%;
+
+    .uploader {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
 }
