--- a/services/admin/src/utils/styles/modules/PopupEditProduct.module.scss
+++ b/services/admin/src/utils/styles/modules/PopupEditProduct.module.scss
@@ -2,17 +2,16 @@
 
 .overlay {
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 1000;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(0, 0, 0, 0.3);
-    top: 0;
-    left: 0;
-    width: 100vh;
-    height: 100vw;
-    z-index: 1000;
-    max-width: 100%;
-    width: 100%;
+    align-content: center;
     padding: 0 12px;
 
     .popup {
