--- a/packages/shared/src/components/UI/FileUploader/FileUploader.module.scss
+++ b/packages/shared/src/components/UI/FileUploader/FileUploader.module.scss
@@ -1,19 +1,20 @@
 @use '@packages/shared/src/utils/styles/colorScheme' as colors;
 
-.wapper {
+.container {
     padding: 12px;
     border-radius: 16px;
     border: 2px dashed colors.$gray;
     width: 100%;
-    height: 100%;
+    height: fit-content;
 
     .uploader {
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: center;
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
+        border-radius: 4px;
     }
 }
