--- a/packages/shared/src/components/UI/InputData/InputData.module.scss
+++ b/packages/shared/src/components/UI/InputData/InputData.module.scss
@@ -6,7 +6,15 @@
     }
     max-width: 400px;
     flex: 1;
+
+    &:has(textarea){
+      max-width: 100%;
+      textarea{
+        max-width: 100%;
+      }
+    }
 }
+
 .input {
   width: 100%;
   padding: 0.75rem 1rem;
