Added a button to send to the umbilical cord for product editing

--- a/services/admin/src/utils/styles/modules/PopupEditProduct.module.scss
+++ b/services/admin/src/utils/styles/modules/PopupEditProduct.module.scss
@@ -54,6 +54,16 @@
                     font-weight: 700;
                 }
             }
+            .submit {
+                display: flex;
+                margin-left: 70%;
+                @media (max-width: 678px) {
+                    margin-left: 50%;
+                }
+                @media (max-width: 620px) {
+                    margin: none;
+                }
+            }
 
             .gridTwoCols {
                 display: grid;
