--- a/services/admin/src/utils/styles/modules/PopupEditProduct.module.scss
+++ b/services/admin/src/utils/styles/modules/PopupEditProduct.module.scss
@@ -40,6 +40,9 @@
                 display: flex;
                 gap: 16px;
                 width: 100%;
+                @media (max-width: 790px) {
+                    flex-direction: column;
+                }
             }
             .section {
                 background-color: colors.$milkish;
