Subtle style improvements and code changes

--- a/packages/shared/src/utils/styles/global.module.scss
+++ b/packages/shared/src/utils/styles/global.module.scss
@@ -11,6 +11,7 @@ body {
         max-width: consts.$clientWidth;
         width: 100%;
         margin: 0 auto;
+        padding: 50px;
+        background-color: aqua;
     }
-    overflow-x: hidden;
 }
