--- a/packages/shared/src/utils/styles/modules/ProductCard.module.scss
+++ b/packages/shared/src/utils/styles/modules/ProductCard.module.scss
@@ -26,6 +26,7 @@
 .product__img {
     width: 100%;
     height: 250px;
+    border-radius: 8px;
     background-color: color-mix(in srgb, colors.$gray, transparent 70%);
     overflow: hidden;
     border-bottom: 1px solid colors.$ash;
