--- a/services/admin/src/utils/styles/modules/UserCard.module.scss
+++ b/services/admin/src/utils/styles/modules/UserCard.module.scss
@@ -15,6 +15,9 @@
   &:hover {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
+  &:not(:last-child){
+    margin-bottom: 8px;
+  }
 }
 
 .avatar {
