--- a/packages/shared/src/utils/styles/modules/MainFooter.module.scss
+++ b/packages/shared/src/utils/styles/modules/MainFooter.module.scss
@@ -1,6 +1,6 @@
 .footer_copyright {
     width: 100%;
-    padding: 10px;
+    padding: 10px 10px 20px 10px;
     text-align: center;
     letter-spacing: 2px;
     .copyright__text {
