--- a/services/shop/src/components/UI/FullScreenArrowButton/FullScreenArrowButton.module.scss
+++ b/services/shop/src/components/UI/FullScreenArrowButton/FullScreenArrowButton.module.scss
@@ -1,4 +1,4 @@
-@use '@packages/shared/src/utils/styles/colorScheme' as colors;
+﻿@use '@packages/shared/src/utils/styles/colorScheme' as colors;
 
 .toConstructor {
     max-width: 1440px;
@@ -139,3 +139,5 @@
         transform: translateX(-1727%);
     }
 }
+
+
